# Piccolo

./: .gitignore  AGENTS.MD  CLAUDE.md  README.md  ReleaseNotes.md  build_macos.sh  imgui.ini
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
Docs/: 2026-06-06-d3d12-render-backend-implementation-plan.md  2026-06-07-d3d12-render-backend-current-progress.md  2026-06-07-d3d12-render-backend-current-status.md  2026-06-07-d3d12-render-backend-progress-audit.md  2026-06-07-d3d12-render-backend-progress.md  D3D12分支上游提交-CodeReview.md  D3D12分支上游提交-实施计划.md  README.md  d3d12-path-tracing.md  梦幻211号.md
Docs/plans/: vulkan-path-tracing-remediation-plan.md
Docs/superpowers/: 2026-06-24-path-tracing-pipeline-nsight-findings.md
Docs/superpowers/plans/: 2026-06-08-d3d12-windows-vulkan-replacement.md  2026-06-10-d3d12-render-backend-completion.md  2026-06-11-d3d12-path-tracing-renderer.md  2026-06-12-d3d12-path-tracing-completion.md  2026-06-17-path-tracing-perf-correctness-review.md  2026-06-17-path-tracing-perf-correctness.md  2026-06-18-path-tracing-eliminate-per-frame-buffer-rebuild-review.md  2026-06-18-path-tracing-eliminate-per-frame-buffer-rebuild.md  2026-06-18-path-tracing-gpu-skinning-review.md  2026-06-18-path-tracing-gpu-skinning.md  2026-06-19-extract-gpu-skinning-to-standalone-pass-review.md  2026-06-19-extract-gpu-skinning-to-standalone-pass.md  2026-06-19-fix-gpu-skinning-dataflow-review.md  2026-06-19-fix-gpu-skinning-dataflow.md  2026-06-22-decouple-skinning-architecture-and-fix-offset-bugs.md  2026-06-23-fix-path-tracing-bugs-and-redundancy-review.md  2026-06-23-path-tracing-bugs-and-redundancy.md  (+5 more)
cmake/: GenerateRenderShaderBytecodeHeader.cmake  PiccoloFindDXC.cmake  ShaderCompile.cmake
engine/: .gitignore  CMakeLists.txt
engine/configs/deployment/: PiccoloEditor.ini  PiccoloEditorNonWindows.ini  PiccoloEditorVulkan.ini
engine/configs/development/: PiccoloEditor.ini
engine/shader/: CMakeLists.txt
engine/shader/glsl/: path_tracing_denoise.comp
engine/shader/hlsl/: axis.frag.hlsl  axis.vert.hlsl  color_grading.frag.hlsl  combine_ui.frag.hlsl  common.hlsli  debugdraw.frag.hlsl  debugdraw.vert.hlsl  deferred_lighting.frag.hlsl  deferred_lighting.vert.hlsl  fxaa.frag.hlsl  gpu_skinning.comp.hlsl  gpu_skinning.hlsli  mesh.frag.hlsl  mesh.vert.hlsl  mesh_directional_light_shadow.frag.hlsl  mesh_directional_light_shadow.vert.hlsl  mesh_gbuffer.frag.hlsl  mesh_inefficient_pick.frag.hlsl  mesh_inefficient_pick.vert.hlsl  mesh_point_light_shadow.frag.hlsl  mesh_point_light_shadow.geom.hlsl  mesh_point_light_shadow.vert.hlsl  particle_emit.comp.hlsl  particle_kickoff.comp.hlsl  particle_simulate.comp.hlsl  particlebillboard.frag.hlsl  particlebillboard.vert.hlsl  path_tracing.lib.hlsl  path_tracing_common.hlsli  path_tracing_core.hlsli  path_tracing_denoise.comp.hlsl  path_tracing_light.hlsli  path_tracing_rng.hlsli  path_tracing_sampling.hlsli  path_tracing_skin.comp.hlsl  post_process.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl  tone_mapping.frag.hlsl
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor_file_service.h
engine/source/editor/source/: main.cpp
engine/source/precompile/: precompile.cmake
engine/source/runtime/: CMakeLists.txt
engine/source/runtime/core/log/: log_system.cpp
engine/source/runtime/core/math/: math.cpp  math.h
engine/source/runtime/core/meta/reflection/: reflection.cpp
engine/source/runtime/function/animation/lganim/: anim_instance.cpp  mm_instance.cpp  mm_instance.h
engine/source/runtime/function/framework/component/animation/: animation_component.cpp
engine/source/runtime/function/framework/component/lua/: lua_component.cpp
engine/source/runtime/function/framework/component/motor/: motor_component.cpp
engine/source/runtime/function/global/: global_context.cpp
engine/source/runtime/function/render/: path_tracing_diagnostics.cpp  path_tracing_diagnostics.h  render_backend.cpp  render_backend.h  render_camera.cpp  render_camera.h  render_common.h  render_gpu_resource.h  render_mesh.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_resource_base.h  render_resource_sky_cdf.cpp  render_resource_sky_cdf.h  render_scene.cpp  render_scene.h  render_shader_bytecode.h  render_system.cpp  render_system.h  render_type.h  window_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_buffer.cpp  debug_draw_buffer.h  debug_draw_font.cpp  debug_draw_font.h  debug_draw_manager.cpp  debug_draw_pipeline.cpp  debug_draw_pipeline.h
engine/source/runtime/function/render/interface/: RHI_RESOURCE_LIFECYCLE.md  rhi.h  rhi_allocation.h  rhi_frame_retire.cpp  rhi_frame_retire.h  rhi_object.h  rhi_ray_tracing.h  rhi_struct.h
engine/source/runtime/function/render/interface/d3d12/: d3d12_debug_layer.cpp  d3d12_debug_layer.h  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.h  d3d12_rhi.cpp  d3d12_rhi.h  d3d12_rhi_commands.cpp  d3d12_rhi_device.cpp  d3d12_rhi_internal.cpp  d3d12_rhi_internal.h  d3d12_rhi_ray_tracing.cpp  d3d12_rhi_resource.cpp  d3d12_rhi_resource.h
engine/source/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_vma.cpp
engine/source/runtime/function/render/passes/: color_grading_pass.cpp  color_grading_pass.h  combine_ui_pass.cpp  combine_ui_pass.h  directional_light_pass.cpp  fxaa_pass.cpp  fxaa_pass.h  gpu_skinning_pass.cpp  gpu_skinning_pass.h  main_camera_pass.cpp  main_camera_pass.h  main_camera_pass_render_pass.cpp  main_camera_pass_render_pass.h  particle_pass.cpp  particle_pass.h  path_tracing_pass.cpp  path_tracing_pass.h  pick_pass.cpp  pick_pass.h  point_light_pass.cpp  tone_mapping_pass.cpp  tone_mapping_pass.h  ui_imgui_backend.cpp  ui_imgui_backend.h  ui_pass.cpp  ui_pass.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
scripts/snapshot/: snap_screen.ps1  snap_window.ps1
(+3 files in other folders)
